samples/_failures_safe/1761406771_1387fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_547a0d70.c:152:1: error: expected identifier or ‘(’ at end of input
  152 | void
      | ^~~~
